fix : 회원가입 시 기본이미지 설정 경로 수정